delete file as ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+###############################################################################
+#  .gitignore 설정 후에 항상 Tacking file이나 folder의 cache를 삭제해주고 다시 
+#   파일을 무시하지 않게 수정했으면 수정해야 한다.
+#
+#  전체 cache를 다 지우고 다시 cache 하는 방법은 무식하지만, 간단하다. 만약, 파일이 많지 않다면 try.
+#
+#  $ git rm -r –cached . => 현재 repository의 cache를 삭제
+#  $ git add . => 다시 tracking하도록 설정
+#  $ git commit -m “Updated .gitignore”
+#
+###############################################################################
+
 
 #python
 *.pyc
@@ -13,3 +25,4 @@ bin
 
 #Xcode
 .DS_Store
+
