--- a/.gitignore
+++ b/.gitignore
@@ -10,19 +10,22 @@
 #
 ###############################################################################
 
-
-#python
+###
+# python 
 *.pyc
+#*.sqlite3
 
+###
 #Android
 gen
 bin
 .classpath
 .settings
 
+###
 #Eclipse
 
-
+###
 #Xcode
 .DS_Store
 
